--- a/grant-2016/sass/includes/_navigation.scss
+++ b/grant-2016/sass/includes/_navigation.scss
@@ -5,7 +5,6 @@ nav.menu{
 	position: relative;
 	.container{
 		position: relative;
-		padding: 0;
 	}
 	&:after{
 		background: url(../img/menu-bg-out.png) top center repeat-x;
